# curator-tag-vocab

./: .event-pr_commented-1772596946346.json  .event-pr_commented-1772633101836.json  .event-pr_commented-1772700956968.json  .event-pr_commented-1772702349971.json  .event-pr_commented-1772702994620.json  .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml  vocab.db
.claude/: autonomous_coding_agent.md  bugfix_instructions.md  prd_draft_instructions.md  prd_implement_instructions.md  prd_instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  refactor.yml
.github/archive/: agent.yml
.github/workflows/: agent.yml  claude_auto_dev.yml  coding-agent-event-dispatch.yml  dispatch_pr.yml  issue_handler.yml  setup_pr.yml
config/: categories.json
curator_tag_vocab/: __init__.py  app.py  config.py
curator_tag_vocab/api/: __init__.py  routes.py
curator_tag_vocab/models/: __init__.py  category.py  tag.py
curator_tag_vocab/protobuf/: tags_vocabulary.proto  tags_vocabulary_pb2.py  tags_vocabulary_pb2.pyi
curator_tag_vocab/repositories/: __init__.py  database.py  tag_repository.py
curator_tag_vocab/services/: __init__.py  category_service.py  export_service.py  tag_service.py
curator_tag_vocab/utils/: __init__.py  error_handlers.py  logging_config.py
docs/: ARCHITECTURE.md  CLAUDE_AGENT_USAGE.md  REFACTOR_NOTES.md  TEST_GUIDE.md  TROUBLESHOOTING.md
docs/plans/: issue-11.md  (+25 more)
knowledge/: pr-88.md
scripts/: export_vocab.py  sync_to_ultra.sh
src/: __init__.py  app.py  app_tagging.py  db.py
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_dao.py  test_models.py  test_repositories.py  test_services.py
(+77 files in other folders)
